--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">AIVIE</string>
+
+    <string name="log_into_account">Log into your account</string>
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password</string>
+    <string name="action_login">LOG IN</string>
+    <string name="have_account">Already have an account? </string>
+    <string name="have_account_sign_up">SIGN UP </string>
+
 </resources>
