--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,15 @@
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password</string>
     <string name="action_login">LOG IN</string>
+    <string name="need_account">Need an account? </string>
+    <string name="need_account_sign_up">SIGN UP</string>
+
+    <string name="create_account">Create an account</string>
+    <string name="prompt_create_displayname">Name</string>
+    <string name="prompt_create_email">Email</string>
+    <string name="prompt_create_password">Password</string>
+    <string name="action_signup">SIGN UP</string>
     <string name="have_account">Already have an account? </string>
-    <string name="have_account_sign_up">SIGN UP </string>
+    <string name="have_account_log_in">LOG IN</string>
 
 </resources>
