--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,9 +15,12 @@
     <string name="action_signup">SIGN UP</string>
     <string name="have_account">Already have an account? </string>
     <string name="have_account_log_in">LOG IN</string>
+
     <string name="title_activity_home">HomeActivity</string>
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
+
+    <string name="avatar">Avatar</string>
 
 </resources>
