Modify based on database column name

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,7 +50,7 @@
 
     <!-- Firestore Columns in collection "studies" -->
     <string name="firestore_studies_id">Id</string>
-    <string name="firestore_studies_study_title">StudyTitle</string>
+    <string name="firestore_studies_study_title">Title</string>
     <string name="firestore_studies_visit_plan">VisitPlan</string>
 
 </resources>
