--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,10 +32,15 @@
 
     <!-- Home Frag -->
     <string name="avatar">Avatar</string>
-    <string name="display_name">Display Name</string>
-    <string name="date_of_birth">Date of Birth</string>
     <string name="study_title">Study Title</string>
     <string name="visit_plan">Visit Plan</string>
+    <!-- Profile Frag -->
+    <string name="subject_number">Subject Number </string>
+    <string name="display_name">Display Name</string>
+    <string name="date_of_birth">Date of Birth</string>
+    <string name="age">Age</string>
+    <string name="ethnicity">Ethnicity</string>
+    <string name="race">Race</string>
 
     <!-- Firestore Collection name -->
     <string name="firestore_users">users</string>
