--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,6 +38,7 @@
     <string name="subject_number">Subject Number </string>
     <string name="display_name">Display Name</string>
     <string name="date_of_birth">Date of Birth</string>
+    <string name="ddmmyyyy">DD-MM-YYYY</string>
     <string name="age">Age</string>
     <string name="ethnicity">Ethnicity</string>
     <string name="race">Race</string>
