--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,15 @@
     <string name="have_account">Have an account? </string>
     <string name="have_account_log_in">LOG IN</string>
 
+    <!-- Race Activity -->
+    <string name="race_white">White</string>
+    <string name="race_asian">Asian</string>
+    <string name="race_black">Black or African American</string>
+    <string name="race_hawaiian">Native Hawaiian or Other Pacific Island</string>
+    <string name="race_alaska">American Indian or Alaska Native</string>
+
+    <string name="confirm">Confirm</string>
+
     <!-- Profile Activity -->
     <string name="update_profile">Please update patient profile and demographics data</string>
 
