--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,7 +56,8 @@
     <string name="study_title">Study Title</string>
     <string name="visit_plan">Visit Plan</string>
     <!-- Profile Frag -->
-    <string name="subject_number">Subject Number </string>
+    <string name="subject_number">Subject Number</string>
+    <string name="signed_icf">Signed ICF</string>
     <string name="display_name">Display Name</string>
     <string name="date_of_birth">Date of Birth</string>
     <string name="yyyy_MM_dd">YYYY-MM-DD</string>
