--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,7 +57,8 @@
     <string name="visit_plan">Visit Plan</string>
     <!-- Profile Frag -->
     <string name="subject_number">Subject Number</string>
-    <string name="signed_icf">Signed ICF</string>
+    <string name="eIcf">eICF</string>
+    <string name="eIcf_signed">eICF Signed</string>
     <string name="display_name">Display Name</string>
     <string name="date_of_birth">Date of Birth</string>
     <string name="yyyy_MM_dd">YYYY-MM-DD</string>
@@ -86,7 +87,8 @@
     <string name="firestore_users_race">Race</string>
     <string name="firestore_users_ethnicity">Ethnicity</string>
     <string name="firestore_users_role">Role</string>
-    <string name="firestore_users_signed_icf">SignedICF</string>
+    <string name="firestore_users_eicf">eICF</string>
+    <string name="firestore_users_eicf_signed">eICF_Signed</string>
     <string name="firestore_users_patient_of_study">PatientOfStudy</string>
     <string name="firestore_users_subject_num">SubjectNumber</string>
     <string name="firestore_users_site">Site</string>
