Implement ICF review and sign activity
1. Button for review ICF file
2. Button for handwritten signature
3. Skip now and enter Home

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,12 @@
 
     <string name="confirm">Confirm</string>
 
+    <!-- ICF Activity -->
+    <string name="icf_review_and_sign">Please review and sign your ICF</string>
+    <string name="icf_review">REVIEW ICF</string>
+    <string name="icf_sign">SIGN ICF</string>
+    <string name="skip_now">Skip now</string>
+
     <!-- Race Activity -->
     <string name="race_white">White</string>
     <string name="race_white_desc">A person having origins in any of the original peoples of Europe, the Middle East, or North Africa.</string>
