--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,7 +67,7 @@
     <string name="eIcf_signed">eICF Signed</string>
     <string name="display_name">Display Name</string>
     <string name="date_of_birth">Date of Birth</string>
-    <string name="yyyy_MM_dd">YYYY-MM-DD</string>
+    <string name="yyyy_MM_dd">yyyy-MM-dd</string>
     <string name="age">Age</string>
     <string name="gender">Gender</string>
     <string name="ethnicity">Ethnicity</string>
