--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,6 +84,10 @@
     <string name="firestore_studies">studies</string>
     <string name="firestore_icf">icf</string>
 
+    <!-- Firestore common column -->
+    <string name="firestore_column_id">Id</string>
+    <string name="firestore_column_title">Title</string>
+
     <!-- Firestore Columns in collection "users" -->
     <string name="firestore_users_display_name">DisplayName</string>
     <string name="firestore_users_first_name">FirstName</string>
@@ -105,8 +109,6 @@
     <string name="firestore_studies_id">Id</string>
     <string name="firestore_studies_title">Title</string>
     <string name="firestore_studies_visit_plan">VisitPlan</string>
-
-    <string name="firestore_column_title">Title</string>
 
     <!-- Firestore document in collection "gender" -->
     <string name="firestore_gender_male">MALE</string>
