Remove "Optional" wording of display name
Will encourage and force user to set display name

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
     <string name="create_account">Create an account</string>
     <string name="prompt_create_last_name">Last Name</string>
     <string name="prompt_create_first_name">First Name</string>
-    <string name="prompt_create_display_name">Display Name (Optional)</string>
+    <string name="prompt_create_display_name">Display Name</string>
     <string name="prompt_create_email">Email</string>
     <string name="prompt_create_password">Password</string>
     <string name="action_signup">CREATE ACCOUNT</string>
